# mmm-bench

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt
data/generator/: __init__.py  scenario.py  simulate.py
docs/: adding-a-tool.md  data-generating-process.md  interpreting-results.md  methodology.md  running-locally.md  scenarios.md
metrics/: __init__.py  business_sense.py  contribution_share.py  fit_index.py  ranking.py  roi_recovery.py  summary.py
quokka/: update-benchmark.md
runners/: __init__.py  base.py  decision_packs.py  meridian.py  pymc_marketing.py  pymc_marketing_tanh.py
scenarios/: __init__.py  adversarial.yaml  complex.yaml  data_scarce.yaml  loader.py  simple.yaml  simple_high_seasonality.yaml  simple_no_controls.yaml  simple_with_lift.yaml
