[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mmm-bench"
version = "0.1.0"
description = "Open benchmark for Marketing Mix Modeling tools"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["data", "data.generator", "metrics", "runners", "scenarios"]
